[SBI-629] Оптимизация запросов в БД для получения данных для отчета